Fix overlapping on ExamCards and styling for premium users

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 
 @theme {
   --breakpoint-sm: 480px;
@@ -37,10 +38,9 @@
   background: transparent;
 }
 .scrollbar-thin::-webkit-scrollbar-thumb {
-  background-color: var(--color-dark); 
+  background-color: var(--color-dark);
   border-radius: 9999px;
 }
 .scrollbar-thin::-webkit-scrollbar-thumb:hover {
-  background-color: var(--color-accent); 
+  background-color: var(--color-accent);
 }
-
